--- a/package.json
+++ b/package.json
@@ -1,6 +1,13 @@
 {
   "name": "bot-unlar",
   "version": "0.1.0",
+  "module": "src/index.js",
+  "dependencies": {
+    "elysia": "latest"
+  },
+  "devDependencies": {
+    "bun-types": "latest"
+  },
   "scripts": {
     "test": "bun test",
     "jest:test": "jest ./test",
@@ -8,20 +15,5 @@
     "dev": "bun run --watch src/index.ts",
     "docker:dev": "docker compose build && docker compose up"
   },
-  "dependencies": {
-    "elysia": "latest"
-  },
-  "devDependencies": {
-    "@jest/globals": "^29.7.0",
-    "@types/jest": "^29.5.5",
-    "bun-types": "latest",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5.2.2"
-  },
-  "module": "src/index.js",
-  "type": "module",
-  "peerDependencies": {
-    "typescript": "^5.0.0"
-  }
+  "type": "module"
 }
